# retro-pilot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  retro-pilot.example.yml
.claude/commands/: add-incident.md  consolidate.md  evaluate.md  run.md  search.md
.github/workflows/: retro-pilot-ci.yml
agents/: action_item_generator.py  base_agent.py  evaluator_agent.py  evidence_collector.py  orchestrator_agent.py  postmortem_writer.py  root_cause_analyst.py  timeline_builder.py
demo/: app.py  mock_postmortems.json  reviews.json
demo/scenarios/: deploy-regression.json  redis-cascade.json
demo/static/: index.html
docs/: CNAME  index.html
docs/scenarios/: certificate-expiry.json
docs/superpowers/plans/: 2026-04-08-phase-3-agents.md  2026-04-08-phase-5-demo-ci.md  2026-04-09-review-ui.md
evaluator/: rubric.py  scorer.py
knowledge/: consolidator.py  embedder.py  vector_store.py
scripts/: run_postmortem.py
shared/: config.py  context_budget.py  models.py  state_store.py  tenant_context.py  trust_context.py
tests/: conftest.py  test_action_item_generator.py  test_base_agent.py  test_evaluator.py  test_evidence_collector.py  test_models.py  test_orchestrator.py  test_postmortem_writer.py  test_registry.py  test_review_api.py  test_root_cause_analyst.py  test_shared_utils.py  test_timeline_builder.py  test_tools.py  test_vector_store.py
tests/fixtures/: sample_evidence.json  sample_incident.json
tools/: read_tools.py  registry.py  write_tools.py
(+5 files in other folders)
