[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retro-pilot"
version = "0.1.0"
description = "Autonomous incident post-mortem system — learns from failures, builds institutional memory"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=agents --cov=shared --cov=tools --cov=evaluator --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "demo/*", "docs/*"]

[tool.hatch.build.targets.wheel]
packages = ["agents", "shared", "tools", "knowledge", "evaluator"]
